- Os comandos `/humor` e `/fodase` foram movidos para dentro de `/meme`
- Os comandos `/cor` e `/sobremim` foram movidos para dentro de `/personalizar`
- Os comandos `idioma`, `blockcmd` e `blockcanal` foram movidos para dentro de `/config`

### Fixed

- O idioma `ingles` voltou a funcionar

### Removed

- O comando `/deletar` foi _deletado_. Para fazer um pedido de deleção de conta, envie um email para `support@menherabot.xyz`
- O comando `/adicionar` foi removido. Você poder adicionar a Menhera diretamente do perfil dela agora!
- O comando `/suporte` foi removido. Para entrar no servidor de suporte, basta clicar no link do comando `/status menhera`
- O comando `/votar` foi removido. O link para votar aparecerá no comando `/cooldowns` quando você puder votar.

## [3.5.0] 2021-11-15

### Added

- Criado um loop de evento que é executado sempre à meia noite para funções internas
- Usuários não podem usar mais de um comando de economia ao mesmo tempo!
- Usuários no meio de comandos de economia não podem mais ser escolhidos em outros comandos
- Sistema de punição de usuários inativos começou!

### Fix

- Resolvido problema ao ver o banimento de um usuário
- Resolvido problema do blackjack de mandar imagem quando não se responde

## [3.4.3] 2021-11-09

### Added

- Novo comando de imagem `/vasco`

### Fix

- Resolvido o comando inventário não funcionar caso o usuário tenha o item `Necare Hêmítheos`
- Resolvido problema do trisal quando nao encontrava usuarios
- Resolvido erro ao usuários caçarem pela primeira vez

## [3.4.2] 2021-11-09

### Fix

- Problema no comando inventário
- Badges de usuário casado mostrando mesmo se o usuário não estiver casado

## [3.4.1] 2021-11-09

### Fix

- Resolvido problema que o sistema de votos não salvava os dados

## [3.4.0] 2021-11-08

### Added

- NOVO COMANDO! `/inventario`
- NOVO SISTEMA! **ITEMS MÁGICOS** - Com itens mágicos, usuários podem aumentar suas chances de caça, trazendo alguns tipos de caças para sempre obterem sucesso