@@ -10,8 +10,8 @@
     "prepare": "husky install",
     "postinstall": "husky install",
     "build": "rm -rf dist && tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist",
-    "start": "NODE_ENV=production node .",
-    "dev": "NODE_ENV=development node .",
+    "start": "VERSION=$npm_package_version NODE_ENV=production node .",
+    "dev": "VERSION=$npm_package_version NODE_ENV=development node .",
     "run:dev": "npm run build && npm run dev",
     "lint:fix": "eslint --fix .",
     "lint:test": "eslint .",
