@@ -558,7 +558,8 @@
       "embed_description": "Oi, meu nome é **{{name}}**, e eu sou uma Bot Brasileira para Discord com foco em diversão e RPG! Fui criada em **{{createdAt}}** e entrei nesse servidor **{{joinedAt}}**.\n\nUm pouco sobre mim: Meu nome é Menhera, tenho 16 anos e AMO, mas tipo AMO usar essas carinhas: (>...<). Para saber mais, entre em meu [twitter](https://twitter.com/__MenheraBot), em meu [servidor de suporte](https://discord.gg/fZMdQbA) e em meu [WEBSITE](https://menherabot.xyz/).",
       "embed_footer": "foi criada por",
       "memory": "Memória",
-      "version": "Versão"
+      "version": "Versão",
+      "extended": "Informações dos Shards"
     },
     "blackjack": {
       "usage": "[usuário]",
